--- a/omarchy/waybar/style.css
+++ b/omarchy/waybar/style.css
@@ -7,7 +7,7 @@
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: 'FiraCode Nerd Font';
+  font-family: FiraCode Nerd Font, monospace;
   font-size: 14px;
 }
 
@@ -37,26 +37,22 @@
 #custom-screenrecording-indicator,
 #custom-update {
   min-width: 12px;
-  margin: 0 7.5px;
-}
-
-#tray {
-  margin-right: 16px;
+  margin: 0 10 0 10px;
 }
 
 #bluetooth {
-  margin-right: 17px;
+  margin-right: 10px;
 }
 
 #network {
-  margin-right: 13px;
+  margin-right: 10px;
 }
 
 #custom-expand-icon {
   margin-right: 20px;
 }
 
-tooltip {
+#tooltip {
   padding: 2px;
 }
 
@@ -83,5 +79,5 @@ tooltip {
 }
 
 #taskbar button.active * {
-  color: #a55555;
+  color: #61afef;
 }
