feat(omarchy): update configs

--- a/omarchy/waybar/style.css
+++ b/omarchy/waybar/style.css
@@ -41,7 +41,7 @@ tooltip {
 }
 
 #clock {
-  margin-left: 8.75px;
+  margin-left: 5px;
 }
 
 .hidden {
@@ -56,3 +56,12 @@ tooltip {
   color: #ef596f;
 }
 
+
+#custom-voxtype {
+  min-width: 12px;
+  margin: 0 0 0 7.5px;
+}
+
+#custom-voxtype.recording {
+  color: #a55555;
+}
